fix: scrolling scrollable viewport on mobile when view size is too large

--- a/styles.css
+++ b/styles.css
@@ -453,6 +453,8 @@ hr {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    position: relative;
 }
 
 .generic-empty-container {
